Removed contacts menu item. Added z-index fix according to Joe

--- a/src/views/Form/Form.scss
+++ b/src/views/Form/Form.scss
@@ -48,7 +48,7 @@
 
     .text-right {
       width: 92%;
-
+      z-index: 1;
       input[type='checkbox'], input[type='radio'] {
         position: absolute;
       }
